Build Your Own Portfolio Website - Part 2

--- a/portfolio/part2/index.html
+++ b/portfolio/part2/index.html
@@ -1,1 +1,57 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <title>Maneskin!</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/M%C3%A5neskin_logo.svg/2560px-M%C3%A5neskin_logo.svg.png" alt="Maneskin logo" width="80" height="20"> </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Band</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Concerts</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+        <div class="landing-picture"></div>
+        <div class="description">
+          <h1>Maneskin</h1>
+          <h3>We make music</h3>
+        </div>
+    </div>
+    <div class="container bio">
+      Maneskin
+      <br />
+      Måneskin (Italian: [ˈmɔːneskin],[1] Danish: [ˈmɔːnəˌske̝nˀ];[2] Danish for 'moonlight') is an Italian rock band formed in Rome in 2016. The group's line-up consists of vocalist Damiano David, bassist Victoria De Angelis, guitarist Thomas Raggi and drummer Ethan Torchio.[3] Performing in the streets in their early days, the band rose to prominence after finishing second in the eleventh season of the Italian talent show X Factor in 2017, and international prominence when they won the Sanremo Music Festival 2021 and the Eurovision Song Contest 2021 – as the Italian representatives in the latter – with the song "Zitti e buoni".
+    </div>
+    
+    <div class="custom-container bio">
+      <div class="box item1">1111111111</div>
+      <div class="box item2">2</div>
+      <div class="box item3">3</div>
+      <div class="box item4">4</div>
+      <div class="box item5">5</div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  </body>
+</html>
